improved the startup time for Multi Editor panes.

added support for custom colors and components for most (if not all) 
components.

added a Color selector and a Font selector.

made file->exit check for unsent messages and offer you a chance to send
them.  (BUG:  doesn't work properly under jdk1.2)

added saving messages as drafts (BUG:  doesn't work properly under jdk1.2)

Outbox no longer throws a NPE if the Outbox is not yet open.

added support for specifying SMTP port number (dan)

folder menu now uses submenus to display folders instead of one huge menu (dan)

added selectAll support for read messages, new messages, and the FolderTable.

added undo/redo support for the new message editor

added a File Selector for Configuration properties that take files.


011226 release
--------------

fixed a bug where two copies of a message could get added to the folder
list.

changed the system that synchronized with the IMAP subscribed folders so 
that it always considers INBOX subscribed.

changed the HTML display method so that, if any errors happen, it shows
the html as text, instead.

modified the New Account creation on startup to use the new Connection /
OutgoingMailServer system.

fixed the Search date formater to be MM/dd/yyyy instead of MM/hh/yyyy.

fixed a problem with synchronizing with subscribed IMAP folders--subfolders
weren't being synchronized properly.

made the property editor windows resizable under the desktoppropertyeditor.

changed the SSL server support so that we now can connect using a self-signed
certificate chain.

fixed a bug in UIDFolderInfo which made it so you couldn't append 
non-UIDMimeMessages.

modified the fetch() functionality of the FolderInfos so that we only 
fetch Pooka.fetchBatchSize messages at a time.  this should reduce the amout
of time it takes to display large folders at startup.

changed the SMTP server support so that we now have a separate SMTP server