@@ -14,6 +14,9 @@ up getting configured the same way.
 
 *) have Pooka itself change its icon if you get new messages, in addition to 
 changing the title bar.
+	done.  todo:  get good icons.
+	add same for Message and NewMessage windows.
+	
 
 *) add a browser to browse/select all registered (open or not) Folders.  in 
 other words, we want everything that appears in the FolderTree, not all 
